<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_global_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingBottom="12dp" />

    <EditText
        android:id="@+id/etSpeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/hint_speed" />

    <EditText
        android:id="@+id/etCooldown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/hint_cooldown" />

    <EditText
        android:id="@+id/etPauseMin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/hint_pause_min" />

    <CheckBox
        android:id="@+id/cbAutoPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_auto_pause" />

    <EditText
        android:id="@+id/etNetGrace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/hint_net_grace" />

    <EditText
        android:id="@+id/etAuthKeyGlobal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_auth_key_global" />

    <Button
        android:id="@+id/btnSaveGlobal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        android:layout_marginTop="20dp" />
</LinearLayout>
